--- a/resources/scss/ceres/widgets/Common/_image-carousel-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_image-carousel-widget.scss
@@ -149,8 +149,8 @@
 }
 
 /* Compatibility for IE */
+/* display img with optimal aspect ratio */
 html.ie {
-    /* display with optimal aspect ratio */
     .widget-image-carousel .widget-inner .carousel-item .img-cover {
         min-height: auto;
         min-width: auto;
