CHANGE LiveShopping - add markup for the details component

--- a/resources/scss/ceres/components/_live-shopping.scss
+++ b/resources/scss/ceres/components/_live-shopping.scss
@@ -13,6 +13,11 @@ $live-shopping-padding: 1rem .8rem;
 
         > a
         {
+            color: $gray;
+            display: block;
+            font-weight: normal;
+            line-height: 1.5em;
+            position: relative;
             text-align: center;
         }
     }
