--- a/resources/views/LiveShopping/Components/LiveShoppingTimerOld.twig
+++ b/resources/views/LiveShopping/Components/LiveShoppingTimerOld.twig
@@ -1,6 +1,6 @@
 {% set shippingCat = config("Ceres.global.shippingCostsCategoryId") %}
 
-<script type="x/template" id="vue-live-shopping-timer">
+<script type="x/template" id="vue-live-shopping-timer-old">
     <div class="live-shopping">
         <div class="h3 live-shopping-item-name">
             <a class="thumb-title" :href="itemData | itemURL">
