--- a/resources/scss/ceres/widgets/Common/_live-shopping-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_live-shopping-widget.scss
@@ -48,7 +48,7 @@
 
                 .live-shopping-item-name
                 {
-                    > .thumb-title
+                    > a
                     {
                         font-weight: normal;
                     }
