--- a/resources/views/LiveShopping/Components/LiveShoppingDetails.twig
+++ b/resources/views/LiveShopping/Components/LiveShoppingDetails.twig
@@ -1,5 +1,5 @@
 <script type="x/template" id="vue-live-shopping-details">
-    <div class="live-shopping">
+    <div class="live-shopping-details">
         <div class="h3 live-shopping-item-name">
             <a :href="liveShoppingData.item | itemURL">
                 ${ liveShoppingData.item | itemName }
