--- a/resources/views/LiveShopping/Components/LiveShopping.twig
+++ b/resources/views/LiveShopping/Components/LiveShopping.twig
@@ -1,7 +1,15 @@
+{{ component( "Ceres::ItemList.Components.CategoryItem" ) }}
+{{ component( "Ceres::ItemList.Components.ItemLazyImg" ) }}
 {{ component( "Ceres::LiveShopping.Components.LiveShoppingDetails" ) }}
 
 <script type="x/template" id="vue-live-shopping">
     <div>
-        <live-shopping-details v-if="!!currentOffer" :live-shopping-data="currentOffer" :display-settings="displaySettings"></live-shopping-details>
+        <category-item v-if="!!currentOffer" :item-data="currentOffer.item" decimal-count="{{ ceresConfig.item.storeSpecial }}" image-url-accessor="urlMiddle">
+
+            <item-lazy-img v-if="!!displaySettings.customImagePath" slot="item-image" template="#vue-item-lazy-img" :image-url="displaySettings.customImagePath" :alt="currentOffer.item | itemName" :title="currentOffer.item | itemName"></item-lazy-img>
+
+            <live-shopping-details v-if="!!currentOffer" slot="item-details" :live-shopping-data="currentOffer" :display-settings="displaySettings"></live-shopping-details>
+            
+        </category-item>
     </div>
 </script>
