--- a/resources/views/Widgets/Common/LiveShoppingWidget.twig
+++ b/resources/views/Widgets/Common/LiveShoppingWidget.twig
@@ -22,7 +22,7 @@
     <div class="row clearfix">
         <div class="col-xs-12">
             {{ Twig.if("liveShoppingData.item is not empty") }}
-                <live-shopping :live-shopping-id="1" :display-settings="{{ liveShoppingConfig | json_encode }}"></live-shopping>
+                <live-shopping-item :live-shopping-id="1" :display-settings="{{ liveShoppingConfig | json_encode }}"></live-shopping-item>
             {{ Twig.endif() }}
         </div>
     </div>
