--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -13217,7 +13217,6 @@ body.lb-disable-scrolling {
 
 .owl-carousel.owl-grab {
   cursor: move;
-  cursor: -webkit-grab;
   cursor: grab;
 }
 
@@ -14103,74 +14102,109 @@ Custom classes
   }
 }
 
-.live-shopping {
-  padding: 0 !important;
+.live-shopping-details {
+  position: relative;
+  padding: 0;
+  margin: 0;
 }
 
-.live-shopping .live-shopping-countdown {
+.live-shopping-details .live-shopping-item-name {
+  padding: .8rem;
+  margin: 0;
+}
+
+.live-shopping-details .live-shopping-item-name > a {
+  color: #7a7f7f;
+  display: block;
+  font-weight: normal;
+  line-height: 1.5em;
+  position: relative;
+  text-align: center;
+}
+
+.live-shopping-details .live-shopping-countdown {
   padding: 1rem 0.8rem;
   padding-top: .6rem;
   border-top-left-radius: .25rem;
   border-top-right-radius: .25rem;
 }
 
-.live-shopping .live-shopping-countdown .live-shopping-countdown-heading {
+.live-shopping-details .live-shopping-countdown .live-shopping-countdown-separator {
+  margin-bottom: .5rem;
+  margin-top: 0;
+}
+
+.live-shopping-details .live-shopping-countdown .live-shopping-countdown-heading {
   text-align: center;
   margin-bottom: 5px;
 }
 
-.live-shopping .live-shopping-countdown .live-shopping-countdown-thread-container {
+.live-shopping-details .live-shopping-countdown .live-shopping-countdown-thread-container {
   display: -ms-flexbox;
   display: flex;
 }
 
-.live-shopping .live-shopping-countdown .live-shopping-countdown-thread-container:not(:last-child) {
+.live-shopping-details .live-shopping-countdown .live-shopping-countdown-thread-container:not(:last-child) {
   margin-bottom: .5rem;
 }
 
-.live-shopping .live-shopping-countdown .live-shopping-countdown-thread-container .live-shopping-countdown-thread {
+.live-shopping-details .live-shopping-countdown .live-shopping-countdown-thread-container .live-shopping-countdown-thread {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
 }
 
-.live-shopping .live-shopping-countdown .live-shopping-countdown-thread-container .live-shopping-countdown-thread .test {
+.live-shopping-details .live-shopping-countdown .live-shopping-countdown-thread-container .live-shopping-countdown-thread .live-shopping-countdown-thread-number {
   line-height: 1.1;
   font-size: 2rem;
   font-weight: bold;
 }
 
-.live-shopping .live-shopping-prices {
+.live-shopping-details .live-shopping-prices {
   padding: 0.5rem 1rem 0.8rem 1rem;
 }
 
-.live-shopping .live-shopping-prices .live-shopping-prices-inner {
-  display: -ms-flexbox;
-  display: flex;
+.live-shopping-details .live-shopping-prices .live-shopping-prices-inner {
+  display: -ms-grid;
+  display: grid;
+  grid-template-areas: "top" "bottom";
 }
 
-.live-shopping .live-shopping-prices .live-shopping-prices-inner .live-shopping-prices-container {
-  margin-left: auto;
+.live-shopping-details .live-shopping-prices .live-shopping-prices-inner .live-shopping-prices-rebate {
+  grid-area: bottom;
 }
 
-.live-shopping .live-shopping-prices .live-shopping-prices-inner .live-shopping-prices-container .live-shopping-price {
+.live-shopping-details .live-shopping-prices .live-shopping-prices-inner .live-shopping-prices-container {
+  grid-area: top;
+  margin-left: 0;
+}
+
+.live-shopping-details .live-shopping-prices .live-shopping-prices-inner .live-shopping-prices-container .live-shopping-price {
   line-height: 1.1;
   font-size: 2rem;
 }
 
-.live-shopping .live-shopping-prices .live-shopping-prices-additional-info {
+.live-shopping-details .live-shopping-prices .live-shopping-prices-additional-info {
   font-size: 80%;
   font-weight: normal;
   text-align: center;
   margin-top: .25rem;
 }
 
-.live-shopping .live-shopping-progress:not(:last-child) {
+.live-shopping-details .live-shopping-prices .live-shopping-prices-additional-info a {
+  color: inherit;
+  font-weight: bold;
+}
+
+.live-shopping-details .live-shopping-progress:not(:last-child) {
   margin-bottom: .5rem;
 }
 
-.live-shopping .live-shopping-progress .live-shopping-progress-heading {
+.live-shopping-details .live-shopping-progress .live-shopping-progress-heading {
   text-align: center;
+}
+
+.live-shopping-details .live-shopping-progress .live-shopping-progress-heading:not(:last-child) {
   margin-bottom: .5rem;
 }
 
@@ -20251,151 +20285,6 @@ body.menu-is-visible {
   width: 100% !important;
 }
 
-.widget {
-  margin-bottom: 2rem;
-}
-
-.widget .widget-inner {
-  position: relative;
-}
-
-.widget .widget-inner .widget {
-  margin-bottom: 0;
-}
-
-@media (max-width: 767px) {
-  .widget {
-    margin-bottom: 1rem;
-  }
-  .widget .widget-inner .widget {
-    margin-bottom: 1rem;
-  }
-}
-
-.widget-proportional {
-  position: relative;
-  padding-bottom: 33.33333%;
-  overflow: hidden;
-}
-
-.widget-proportional .widget-inner {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
-
-@media (min-width: 768px) {
-  .widget-grid-1-2 > .widget-inner:first-child .widget-proportional,
-  .widget-grid-2-1 > .widget-inner:last-child .widget-proportional,
-  .widget-grid-2-1-1 > .widget-inner .widget-proportional,
-  .widget-grid-1-2-1 > .widget-inner .widget-proportional,
-  .widget-grid-1-1-2 > .widget-inner .widget-proportional {
-    padding-bottom: 100%;
-  }
-  .widget-grid-1-1-1 > .widget-inner .widget-proportional {
-    padding-bottom: 66.6666%;
-  }
-  .widget-grid-1-1-1-1 > .widget-inner .widget.widget-proportional {
-    padding-bottom: 100%;
-  }
-  .widget-grid-1-2 > .widget-inner:last-child .widget-proportional,
-  .widget-grid-2-1 > .widget-inner:first-child .widget-proportional,
-  .widget-grid-2-1-1 > .widget-inner:first-child .widget-proportional,
-  .widget-grid-1-2-1 > .widget-inner:nth-child(2) .widget-proportional,
-  .widget-grid-1-1-2 > .widget-inner:last-child .widget-proportional {
-    padding-bottom: 50%;
-  }
-  .widget-grid-stacked .widget-inner .widget-proportional {
-    padding-bottom: 66%;
-  }
-  .widget-grid-stacked .widget-inner-stacked .widget-proportional {
-    padding-bottom: 0;
-    height: 100%;
-  }
-  .widget-grid-stacked .widget-inner-stacked .widget-proportional > .widget-inner .widget-caption h2, .widget-grid-stacked .widget-inner-stacked .widget-proportional > .widget-inner .widget-caption .h2 {
-    font-size: 1.75rem;
-  }
-}
-
-.widget-editable-min-height {
-  min-height: 40px;
-}
-
-.widget-grid {
-  margin-left: -15px;
-  margin-right: -15px;
-}
-
-@media (min-width: 768px) {
-  .widget-grid {
-    display: -ms-flexbox;
-    display: flex;
-  }
-}
-
-.widget-grid .widget-inner {
-  padding-left: 15px;
-  padding-right: 15px;
-  -ms-flex: 1;
-      flex: 1;
-}
-
-.widget-grid .widget-inner-stacked {
-  margin-left: -15px;
-  margin-right: -15px;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-direction: column;
-      flex-direction: column;
-}
-
-@media (min-width: 768px) {
-  .widget-grid .widget-inner-stacked > .widget-inner:first-child {
-    padding-bottom: 2rem;
-  }
-}
-
-.widget-grid.widget-grid-1-2 .widget-inner:last-child,
-.widget-grid.widget-grid-2-1 .widget-inner:first-child,
-.widget-grid.widget-grid-1-1-2 .widget-inner:last-child,
-.widget-grid.widget-grid-1-2-1 .widget-inner:nth-child(2),
-.widget-grid.widget-grid-2-1-1 .widget-inner:first-child,
-.widget-grid.widget-grid-stacked .widget-inner:not(.widget-inner-stacked) {
-  -ms-flex: 2;
-      flex: 2;
-}
-
-.footer .widget-grid .widget-inner .widget-list {
-  position: relative;
-  height: 100%;
-  color: #4D4F4D;
-  background-color: #dadae3;
-  margin-left: -15px;
-  margin-right: -15px;
-  padding-left: 15px;
-  padding-right: 15px;
-  box-sizing: content-box;
-  margin-bottom: 0;
-}
-
-.footer .widget-grid .widget-inner:first-child .widget-list {
-  margin-left: 0;
-  padding-left: 0;
-}
-
-.footer .widget-grid .widget-inner:last-child .widget-list {
-  margin-right: 0;
-  padding-right: 0;
-}
-
-@media (max-width: 767px) {
-  .footer .widget-grid .widget-inner:not(:last-child) .widget-list .widget-inner {
-    padding-bottom: 0;
-  }
-}
-
 .widget-image-box > img {
   position: absolute;
   max-width: 100%;
@@ -20869,51 +20758,85 @@ body.menu-is-visible {
   margin-right: 10px;
 }
 
-.widget-title-bar .widget-inner {
-  padding: 1rem 1.5rem;
+.widget-link-list .widget-inner {
+  padding: 15px 15px 0 15px;
+}
+
+.widget-link-list .widget-inner h2 {
+  font-weight: 700;
+}
+
+.widget-link-list .widget-inner a {
+  color: #4D4F4D;
+}
+
+.widget-list .widget-inner {
+  padding: 1rem 15px;
+}
+
+.widget-list .widget-inner .list-container {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  padding: 0;
+  list-style: none;
   text-align: center;
 }
 
-.widget-title-bar .h1, .widget-title-bar h1 {
-  margin: 0.5rem auto;
-  font-size: 2.5rem;
-  letter-spacing: 1.25px;
-  display: block;
+@media (max-width: 543px) {
+  .widget-live-shopping .thumb-inner .thumb-image {
+    float: none;
+    width: 100%;
+  }
+  .widget-live-shopping .thumb-inner .thumb-image > .square-container {
+    padding-bottom: 50%;
+  }
+  .widget-live-shopping .thumb-inner .live-shopping {
+    width: 100%;
+  }
+  .widget-live-shopping .thumb-inner .live-shopping .live-shopping-item-name > a {
+    font-weight: normal;
+  }
 }
 
-.widget-title-bar.widget-primary {
-  color: #fff;
-  background-color: #008ebd;
+@media (max-width: 767px) {
+  .widget-live-shopping .live-shopping .live-shopping-prices-inner {
+    display: -ms-grid;
+    display: grid;
+    grid-template-areas: "top" "bottom";
+  }
+  .widget-live-shopping .live-shopping .live-shopping-prices-inner .live-shopping-prices-rebate {
+    grid-area: bottom;
+  }
+  .widget-live-shopping .live-shopping .live-shopping-prices-inner .live-shopping-prices-container {
+    grid-area: top;
+    margin-left: 0;
+  }
+  .widget-live-shopping .live-shopping .live-shopping-prices-additional-info {
+    text-align: left;
+  }
 }
 
-.widget-title-bar.widget-secondary {
-  color: #fff;
-  background-color: #d4021d;
+.widget-grid.widget-grid-1-1-1 .widget-live-shopping .live-shopping-prices-inner, .widget-grid.widget-grid-1-1-2 .widget-live-shopping .live-shopping-prices-inner, .widget-grid.widget-grid-1-2-1 .widget-live-shopping .live-shopping-prices-inner, .widget-grid.widget-grid-2-1-1 .widget-live-shopping .live-shopping-prices-inner, .widget-grid.widget-grid-stacked .widget-live-shopping .live-shopping-prices-inner, .widget-grid.widget-grid-1-1-1-1 .widget-live-shopping .live-shopping-prices-inner {
+  display: -ms-grid;
+  display: grid;
+  grid-template-areas: "top" "bottom";
 }
 
-.widget-title-bar.widget-success {
-  color: #fff;
-  background-color: #7ED321;
+.widget-grid.widget-grid-1-1-1 .widget-live-shopping .live-shopping-prices-inner .live-shopping-prices-rebate, .widget-grid.widget-grid-1-1-2 .widget-live-shopping .live-shopping-prices-inner .live-shopping-prices-rebate, .widget-grid.widget-grid-1-2-1 .widget-live-shopping .live-shopping-prices-inner .live-shopping-prices-rebate, .widget-grid.widget-grid-2-1-1 .widget-live-shopping .live-shopping-prices-inner .live-shopping-prices-rebate, .widget-grid.widget-grid-stacked .widget-live-shopping .live-shopping-prices-inner .live-shopping-prices-rebate, .widget-grid.widget-grid-1-1-1-1 .widget-live-shopping .live-shopping-prices-inner .live-shopping-prices-rebate {
+  grid-area: bottom;
 }
 
-.widget-title-bar.widget-info {
-  color: #fff;
-  background-color: #5bc0de;
+.widget-grid.widget-grid-1-1-1 .widget-live-shopping .live-shopping-prices-inner .live-shopping-prices-container, .widget-grid.widget-grid-1-1-2 .widget-live-shopping .live-shopping-prices-inner .live-shopping-prices-container, .widget-grid.widget-grid-1-2-1 .widget-live-shopping .live-shopping-prices-inner .live-shopping-prices-container, .widget-grid.widget-grid-2-1-1 .widget-live-shopping .live-shopping-prices-inner .live-shopping-prices-container, .widget-grid.widget-grid-stacked .widget-live-shopping .live-shopping-prices-inner .live-shopping-prices-container, .widget-grid.widget-grid-1-1-1-1 .widget-live-shopping .live-shopping-prices-inner .live-shopping-prices-container {
+  grid-area: top;
+  margin-left: 0;
 }
 
-.widget-title-bar.widget-warning {
-  color: #fff;
-  background-color: #f0ad4e;
-}
-
-.widget-title-bar.widget-danger {
-  color: #fff;
-  background-color: #d9534f;
-}
-
-.widget-title-bar.widget-inverse {
-  color: #fff;
-  background-color: #4D4F4D;
+.widget-grid.widget-grid-1-1-1 .widget-live-shopping .live-shopping-prices-additional-info, .widget-grid.widget-grid-1-1-2 .widget-live-shopping .live-shopping-prices-additional-info, .widget-grid.widget-grid-1-2-1 .widget-live-shopping .live-shopping-prices-additional-info, .widget-grid.widget-grid-2-1-1 .widget-live-shopping .live-shopping-prices-additional-info, .widget-grid.widget-grid-stacked .widget-live-shopping .live-shopping-prices-additional-info, .widget-grid.widget-grid-1-1-1-1 .widget-live-shopping .live-shopping-prices-additional-info {
+  text-align: left;
 }
 
 .widget-newsletter > .widget-inner {
@@ -20977,32 +20900,196 @@ body.menu-is-visible {
   background-color: #4D4F4D;
 }
 
-.widget-list .widget-inner {
-  padding: 1rem 15px;
-}
-
-.widget-list .widget-inner .list-container {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 0;
-  padding: 0;
-  list-style: none;
+.widget-title-bar .widget-inner {
+  padding: 1rem 1.5rem;
   text-align: center;
 }
 
-.widget-link-list .widget-inner {
-  padding: 15px 15px 0 15px;
+.widget-title-bar .h1, .widget-title-bar h1 {
+  margin: 0.5rem auto;
+  font-size: 2.5rem;
+  letter-spacing: 1.25px;
+  display: block;
 }
 
-.widget-link-list .widget-inner h2 {
-  font-weight: 700;
+.widget-title-bar.widget-primary {
+  color: #fff;
+  background-color: #008ebd;
 }
 
-.widget-link-list .widget-inner a {
+.widget-title-bar.widget-secondary {
+  color: #fff;
+  background-color: #d4021d;
+}
+
+.widget-title-bar.widget-success {
+  color: #fff;
+  background-color: #7ED321;
+}
+
+.widget-title-bar.widget-info {
+  color: #fff;
+  background-color: #5bc0de;
+}
+
+.widget-title-bar.widget-warning {
+  color: #fff;
+  background-color: #f0ad4e;
+}
+
+.widget-title-bar.widget-danger {
+  color: #fff;
+  background-color: #d9534f;
+}
+
+.widget-title-bar.widget-inverse {
+  color: #fff;
+  background-color: #4D4F4D;
+}
+
+.widget-grid {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+@media (min-width: 768px) {
+  .widget-grid {
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.widget-grid .widget-inner {
+  padding-left: 15px;
+  padding-right: 15px;
+  -ms-flex: 1;
+      flex: 1;
+}
+
+.widget-grid .widget-inner-stacked {
+  margin-left: -15px;
+  margin-right: -15px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+}
+
+@media (min-width: 768px) {
+  .widget-grid .widget-inner-stacked > .widget-inner:first-child {
+    padding-bottom: 2rem;
+  }
+}
+
+.widget-grid.widget-grid-1-2 .widget-inner:last-child,
+.widget-grid.widget-grid-2-1 .widget-inner:first-child,
+.widget-grid.widget-grid-1-1-2 .widget-inner:last-child,
+.widget-grid.widget-grid-1-2-1 .widget-inner:nth-child(2),
+.widget-grid.widget-grid-2-1-1 .widget-inner:first-child,
+.widget-grid.widget-grid-stacked .widget-inner:not(.widget-inner-stacked) {
+  -ms-flex: 2;
+      flex: 2;
+}
+
+.footer .widget-grid .widget-inner .widget-list {
+  position: relative;
+  height: 100%;
   color: #4D4F4D;
+  background-color: #dadae3;
+  margin-left: -15px;
+  margin-right: -15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  box-sizing: content-box;
+  margin-bottom: 0;
+}
+
+.footer .widget-grid .widget-inner:first-child .widget-list {
+  margin-left: 0;
+  padding-left: 0;
+}
+
+.footer .widget-grid .widget-inner:last-child .widget-list {
+  margin-right: 0;
+  padding-right: 0;
+}
+
+@media (max-width: 767px) {
+  .footer .widget-grid .widget-inner:not(:last-child) .widget-list .widget-inner {
+    padding-bottom: 0;
+  }
+}
+
+.widget {
+  margin-bottom: 2rem;
+}
+
+.widget .widget-inner {
+  position: relative;
+}
+
+.widget .widget-inner .widget {
+  margin-bottom: 0;
+}
+
+@media (max-width: 767px) {
+  .widget {
+    margin-bottom: 1rem;
+  }
+  .widget .widget-inner .widget {
+    margin-bottom: 1rem;
+  }
+}
+
+.widget-proportional {
+  position: relative;
+  padding-bottom: 33.33333%;
+  overflow: hidden;
+}
+
+.widget-proportional .widget-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+@media (min-width: 768px) {
+  .widget-grid-1-2 > .widget-inner:first-child .widget-proportional,
+  .widget-grid-2-1 > .widget-inner:last-child .widget-proportional,
+  .widget-grid-2-1-1 > .widget-inner .widget-proportional,
+  .widget-grid-1-2-1 > .widget-inner .widget-proportional,
+  .widget-grid-1-1-2 > .widget-inner .widget-proportional {
+    padding-bottom: 100%;
+  }
+  .widget-grid-1-1-1 > .widget-inner .widget-proportional {
+    padding-bottom: 66.6666%;
+  }
+  .widget-grid-1-1-1-1 > .widget-inner .widget.widget-proportional {
+    padding-bottom: 100%;
+  }
+  .widget-grid-1-2 > .widget-inner:last-child .widget-proportional,
+  .widget-grid-2-1 > .widget-inner:first-child .widget-proportional,
+  .widget-grid-2-1-1 > .widget-inner:first-child .widget-proportional,
+  .widget-grid-1-2-1 > .widget-inner:nth-child(2) .widget-proportional,
+  .widget-grid-1-1-2 > .widget-inner:last-child .widget-proportional {
+    padding-bottom: 50%;
+  }
+  .widget-grid-stacked .widget-inner .widget-proportional {
+    padding-bottom: 66%;
+  }
+  .widget-grid-stacked .widget-inner-stacked .widget-proportional {
+    padding-bottom: 0;
+    height: 100%;
+  }
+  .widget-grid-stacked .widget-inner-stacked .widget-proportional > .widget-inner .widget-caption h2, .widget-grid-stacked .widget-inner-stacked .widget-proportional > .widget-inner .widget-caption .h2 {
+    font-size: 1.75rem;
+  }
+}
+
+.widget-editable-min-height {
+  min-height: 40px;
 }
 
 /*# sourceMappingURL=ceres.css.map */
