--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -43,12 +43,14 @@
             </div>
 
             <!-- STORE SPECIALS -->
-            <item-store-special v-if="storeSpecial || itemData.variation.bundleType == 'bundle'"
-                                :store-special="storeSpecial"
-                                :recommended-retail-price="itemData.prices.rrp"
-                                :variation-retail-price="itemData.prices.default"
-                                :decimal-count="decimalCount"
-                                :bundle-type="itemData.variation.bundleType"></item-store-special>
+            <slot name="store-special">
+                <item-store-special v-if="storeSpecial || itemData.variation.bundleType == 'bundle'"
+                                    :store-special="storeSpecial"
+                                    :recommended-retail-price="itemData.prices.rrp"
+                                    :variation-retail-price="itemData.prices.default"
+                                    :decimal-count="decimalCount"
+                                    :bundle-type="itemData.variation.bundleType"></item-store-special>
+            </slot>
             <!-- ./STORE SPECIALS -->
 
             <!-- ITEM DETAILS -->
