--- a/resources/scss/ceres/components/_live-shopping.scss
+++ b/resources/scss/ceres/components/_live-shopping.scss
@@ -128,6 +128,12 @@ $live-shopping-padding: 1rem .8rem;
     }
 }
 
+.live-shopping-add-to-basket
+{
+    padding-left: .8rem;
+    padding-right: .8rem;
+}
+
 @for $i from 10 to -1 {
     .progress-#{$i * 10}
     {
