ADD display placeholder in preview if no offer is active

--- a/resources/scss/ceres/widgets/Common/_live-shopping-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_live-shopping-widget.scss
@@ -57,15 +57,42 @@
         }
     }   
 }
-
 @include media-breakpoint-down(sm)
-{   
+{
     .widget-live-shopping .live-shopping
     {
         @include live-shopping-prices-grid();
     }
 }
 
+.live-shopping-placeholder
+{
+    width: 100%;
+    padding-bottom: 150%;
+    position: relative;
+    background-color: $gray-lighter;
+
+    > div
+    {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        text-align: center;
+        padding: $spacer-x $spacer-y;
+        width: 100%;
+    }
+
+    .title
+    {
+        font-weight: bold;
+        font-size: 1.3rem;
+    }
+
+    .description
+    {
+        font-style: italic;
+    }
+}
 .widget-grid
 {
     &.widget-grid-1-1-1,
@@ -81,3 +108,4 @@
         }
     }
 }
+
