--- a/resources/views/LiveShopping/Components/LiveShoppingItem.twig
+++ b/resources/views/LiveShopping/Components/LiveShoppingItem.twig
@@ -38,5 +38,8 @@
             </live-shopping-details>
             
         </category-item>
+        <div v-else>
+            <slot></slot>
+        </div>
     </div>
 </script>
