--- a/resources/views/Widgets/Common/LiveShoppingWidget.twig
+++ b/resources/views/Widgets/Common/LiveShoppingWidget.twig
@@ -1,14 +1,16 @@
 {% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
 
+{{ Twig.component( 'Ceres::LiveShopping.Components.LiveShoppingItem' ) }}
+
 <div class="widget-live-shopping widget">
     <div class="row clearfix">
         <div class="col-xs-12">
-            <live-shopping-item :live-shopping-id="{{ liveShoppingConfig.liveShoppingSelection | json_encode }}" :display-settings="{{ liveShoppingConfig | json_encode }}">
+            <live-shopping-item :live-shopping-id="{{ liveShoppingConfig.liveShoppingSelection }}" :display-settings="{{ liveShoppingConfig | json_encode }}">
                 {% if isPreview %}
                     <div class="live-shopping-placeholder">
                         <div>
-                            <p class="title">Kein Angebot aktiv.</p>
-                            <p class="description">An dieser Stelle wird kein Inhalt angezeigt, bis ein Angebot aktiv ist.</p>
+                            <p class="title">{{ Twig.trans("Ceres::Widget.liveShoppingPlaceholderTitle") }}</p>
+                            <p class="description">{{ Twig.trans("Ceres::Widget.liveShoppingPlaceholderDescription") }}</p>
                         </div>
                     </div>
                 {% endif %}
