--- a/resources/views/Widgets/Common/NewsletterWidget.twig
+++ b/resources/views/Widgets/Common/NewsletterWidget.twig
@@ -7,6 +7,8 @@
 {% set showPrivacyPolicyCheckbox = widget.settings.showPrivacyPolicyCheckbox.mobile | json_encode %}
 {% set emailFolder = widget.settings.emailFolder.mobile | json_encode %}
 
+{{ Twig.component( "Ceres::Newsletter.Components.NewsletterInput" ) }}
+
 <div class="widget-newsletter widget">
     <div class="widget-inner">
         <newsletter-input appearance="{{ appearance }}" :title="{{ title }}" :sub-title="{{ subTitle }}" :show-name-inputs="{{ showNameInputs }}" :show-privacy-policy-checkbox="{{ showPrivacyPolicyCheckbox }}" :email-folder="{{ emailFolder }}"></newsletter-input>
