--- a/resources/views/LiveShopping/Components/LiveShoppingItem.twig
+++ b/resources/views/LiveShopping/Components/LiveShoppingItem.twig
@@ -10,6 +10,8 @@
     <div>
         <category-item v-if="!!currentOffer" :item-data="currentOffer.item" decimal-count="{{ ceresConfig.item.storeSpecial }}" image-url-accessor="urlMiddle">
 
+            <div v-if="whenIsCurrentOffer() !== 2" slot="add-to-basket-large"></div>
+
             <item-store-special v-if="!!storeSpecial"
                                 slot="store-special"
                                 :store-special="storeSpecial"
@@ -27,7 +29,7 @@
                 </a>
 
 
-            <live-shopping-details v-if="!!currentOffer && isActive" 
+            <live-shopping-details v-if="!!currentOffer && whenIsCurrentOffer() !== 1"
                                    slot="item-details"
                                    :live-shopping-data="currentOffer"
                                    @reload-offer="reloadOffer()"
