CHANGE LiveShopping - clean up sass

--- a/resources/scss/ceres/components/_live-shopping.scss
+++ b/resources/scss/ceres/components/_live-shopping.scss
@@ -99,7 +99,7 @@ $live-shopping-padding: 1rem .8rem;
         {
             font-size: $small-font-size;
             font-weight: normal;
-            text-align: center;
+            text-align: left;
             margin-top: .25rem;
 
             a
